--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
           <h3>Add contact:</h3>
           <form id="newContact">
             <div class="form-group">
-              <label for="new-first-name">Enter first name</label>
+              <label for="new-first-name">Enter first name:</label>
               <input type="text" class="form-control" id="newFirstName">
+            </div>
+            <div class="form-group">
+              <label for="new-last-name">Enter last name:</label>
+              <input type="text" class="form-control" id="newLastName">
             </div>
             <button type="submit" class="btn">Add</button>
           </form>
