--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <div id="displayContact">
             <h3></h3>
 
-            <p>First name: <span class="first-name"></span></p>
-            <p>Last name: <span class="last-name"></span></p>
+            <p>First name: <span class="newFirstName"></span></p>
+            <p>Last name: <span class="newLastName"></span></p>
           </div>
         </div>
       </div>
