--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
               <label for="new-last-name">Enter last name:</label>
               <input type="text" class="form-control" id="newLastName">
             </div>
+            <div id="new-addresses">
+              <div class="new-address">
+                <div class="form-group">
+                  <label for="new-street">Street</label>
+                  <input type="text" class="form-control new-street">
+                </div>
+                <div class="form-group">
+                  <label for="new-city">City</label>
+                  <input type="text" class="form-control new-city">
+                </div>
+                <div class="form-group">
+                  <label for="new-state">State</label>
+                  <input type="text" class="form-control new-state">
+                </div>
+              </div>
+            </div>
+
+            <span class="btn btn-primary" id="add-address">Another address</span>
+
             <button type="submit" class="btn">Add</button>
           </form>
 
