--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Address Book</title>
   </head>
   <body>
     <div class="container">
@@ -14,8 +14,8 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h3>Add contact:</h3>
-          <form id="newContact">
+          <h3>Add a contact:</h3>
+          <form id="new-contact">
             <div class="form-group">
               <label for="new-first-name">Enter first name:</label>
               <input type="text" class="form-control" id="newFirstName">
@@ -28,15 +28,15 @@
               <div class="new-address">
                 <div class="form-group">
                   <label for="new-street">Street</label>
-                  <input type="text" class="form-control new-street">
+                  <input type="text" class="form-control" id="new-street">
                 </div>
                 <div class="form-group">
                   <label for="new-city">City</label>
-                  <input type="text" class="form-control new-city">
+                  <input type="text" class="form-control" id="new-city">
                 </div>
                 <div class="form-group">
                   <label for="new-state">State</label>
-                  <input type="text" class="form-control new-state">
+                  <input type="text" class="form-control" id="new-state">
                 </div>
               </div>
             </div>
@@ -52,13 +52,17 @@
           </ul>
         </div>
         <div class="col-md-6">
-          <div id="displayContact">
+          <div id="show-contact">
             <h3></h3>
+            <p>First name: <span class="new-first-name"></span></p>
+            <p>Last name: <span class="new-last-name"></span></p>
+            <p>Addresses:</p>
+            <ul id="addresses">
 
-            <p>First name: <span class="newFirstName"></span></p>
-            <p>Last name: <span class="newLastName"></span></p>
+            </ul>
           </div>
         </div>
+
       </div>
     </div>
   </body>
